// protoc --go_out=plugins=grpc:. cache_user.proto
// protoc --grpc-gateway_out=logtostderr=true:. cache_user.proto
syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

//option java_package = "";
option go_package = ".;api";

service CacheUser {
    // 缓存单个用户, 禁止多次调用此rpc, 需要cache用户时, 必须使用CacheMultiUser
    rpc CacheSingleUser (CacheSingleUserRequest) returns (CacheSingleUserResponse) {
        option (google.api.http) = {
            put: "/cache/user/single"
            body: "*"
        };
    }
    // 缓存多个单用户
    rpc CacheMultiSingleUser (stream CacheSingleUserRequest) returns (stream CacheSingleUserRequest);
    // 以年级为关键字缓存用户
    rpc CacheUserByGrade (CacheUserByGradeRequest) returns (MultiCacheUserResponse) {
        option (google.api.http) = {
            put: "/cache/user/grade"
            body: "*"
        };
    }
    // 以班级为关键字缓存用户
    rpc CacheUserByClass (CacheUserByClassRequest) returns (MultiCacheUserResponse) {
        option (google.api.http) = {
            put: "/cache/user/class"
            body: "*"
        };
    }
    // 缓存全部用户, 调用此rpc请注意Redis内存占用
    rpc CacheAllUser (google.protobuf.Empty) returns (MultiCacheUserResponse) {
        option (google.api.http) = {
            put: "/cache/user/all"
            body: "*"
        };
    }
    // 删除全部缓存
    rpc RemoveAllUserCache (google.protobuf.Empty) returns (MultiCacheUserResponse) {
        option (google.api.http) = {
            delete: "/cache/user/all"
        };
    }
}

enum CacheUserResponseCode {
    // 成功
    SUCCESS = 0;
    // 部分成功
    PARTIAL_SUCCESS = 1;
    // 失败
    FAIL = 2;
}

message CacheSingleUserRequest {
    string userId = 1;
}

message CacheSingleUserResponse {
    CacheUserResponseCode code = 1;
}

message MultiCacheUserResponse {
    CacheUserResponseCode code = 1;
    // 请注意, 如code并非PARTITAL_SUCCESS, 不会返回successCount
    int32 successCount = 2;
}

message CacheUserByClassRequest {
    string grade = 1;
}

message CacheUserByGradeRequest {
    string grade = 1;
}